k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: product-service
  labels:
    app.kubernetes.io/name: product-service
