k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service-http
  namespace: product-service
  labels:
    app: product-service
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: product-service-grpc
  namespace: product-service
  labels:
    app: product-service
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - name: grpc
      port: 50050
      targetPort: grpc
      protocol: TCP
      appProtocol: grpc
