k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-service-ingress
  namespace: product-service
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /docs
spec:
  ingressClassName: alb
  rules:
    - host: product-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product-service-http
                port:
                  number: 80
